@@ -1,3 +1,4 @@
+- Token authentication: support for token renewal and revoking
 - Compatibility with Elixir server API
 - Relax dependency version requirements
 
